Identity server 4 main function finished
main function finished

--- a/MultiTenant/MultiTenant.IdentityServerFour/appsettings.json
+++ b/MultiTenant/MultiTenant.IdentityServerFour/appsettings.json
@@ -1,13 +1,32 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Id4ConnStr": "Server=127.0.0.1,1434;Database=MultiTenant;User Id=sa;Password=Mrpresident12!;"
+  },
+
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning",
+        "IdentityServer4": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:HH:mm:ss} {MachineName} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ]
+
   }
 }
