--- a/MultiTenant/MultiTenant.Entities/MultiTenant.Entities.csproj
+++ b/MultiTenant/MultiTenant.Entities/MultiTenant.Entities.csproj
@@ -5,12 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.11" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MultiTenant.Shared\MultiTenant.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ConfigrueEF\" />
   </ItemGroup>
 
 </Project>
